<resources>
    <string name="app_name">ZSticker</string>

    <string name="nav_home">Home</string>
    <string name="nav_recents">Recents</string>
    <string name="nav_options">Options</string>

    <string name="section_settings">Settings</string>
    <string name="section_general">About</string>

    <string name="info_theme_title">Theme</string>
    <string name="info_language_title">Language</string>
    <string name="info_version_title">Version</string>
    <string name="info_repo_title">Source Code</string>
    <string name="info_repo_note">https://github.com/huanhoahongso3-collab/ZSticker</string>
    <string name="info_license_title">License</string>
    <string name="info_export_title">Export backup</string>
    <string name="export_image">Export all image</string>
    <string name="export_history">Export all history</string>
    <string name="export_settings">Export all settings</string>
    <string name="export_all">Export all</string>
    <string name="info_import_title">Import backup</string>
    <string name="import_image">Import all image</string>
    <string name="import_history">Import all history</string>
    <string name="import_settings">Import all settings</string>
    <string name="import_all">Import all</string>
    <string name="export_success">Exported to Internal storage/Pictures/ZSticker/%s</string>
    <string name="info_remove_recent_title">Remove all recent stickers</string>
    <string name="info_remove_recent_confirm_title">Delete all history?</string>
    <string name="info_remove_all_title">Remove all stickers</string>
    <string name="info_remove_all_confirm_title">Delete all stickers?</string>
    <string name="info_remove_all_confirm_message">This will permanently delete all your stickers. This action cannot be undone.</string>
    <string name="info_remove_recent_confirm_message">This will permanently delete all of the history of your stickers. This action cannot be undone.</string>

    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_system">System Default</string>
    
    <string name="info_material_color_title">Material Color</string>
    <string name="info_material_color_subtitle">Use system colors</string>
    <string name="info_online_removebg_title">Online background removal</string>
    <string name="info_online_removebg_subtitle">Use third-party API instead of on-device processing</string>
    
    <string name="info_license_note">GNU General Public License v3.0</string>
    
    <string name="sticker_options_title">Sticker Options</string>
    <string name="export">Export to Gallery</string>
    <string name="delete">Delete Sticker</string>
    <string name="view_full_sticker">View full sticker</string>
    <string name="delete_history">Delete History</string>
    <string name="recent_options_title">Recent Options</string>
    <string name="cancel">Cancel</string>
    <string name="zalo_share_failed">Zalo not found or share failed</string>
    <string name="success">Successful</string>
    <string name="failed">Failed</string>
    <string name="no_stickers_found">No stickers found</string>
    <string name="unsupported_file_type">Unsupported file type</string>
    <string name="remove_bg">Remove background</string>
    <string name="rb_completed">Remove background completed!</string>
    <string name="rb_failed">Failed to remove background</string>
    <string name="rb_warning_title">Background Removal Warning</string>
    <string name="rb_warning_message">This feature uses a third-party API (BRIA RMBG 1.4). By continuing, you acknowledge that we do not have permission to read the image and everything is used and controlled by Hugging Face and the third-party service.\n\nProject Link: https://huggingface.co/spaces/briaai/BRIA-RMBG-1.4\nEndpoint Source Code: https://github.com/huanhoahongso3-collab/BRIA-RMBG-1.4-PROXY</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="continue_action">Continue</string>
    
    <string name="lang_en">English</string>
    <string name="lang_vi">Vietnamese</string>
    <string name="lang_ru">Russian</string>
    <string name="lang_zh">Chinese</string>
    <string name="lang_system">System Default</string>

    <string name="dynamic_color_warning_title">Dynamic Color Notice</string>
    <string name="dynamic_color_warning_message">Changing to a theme that differs from your system settings may disable Material You dynamic colors on some devices.</string>
    <string name="ok">OK</string>
    <string name="no_internet_access">No internet access</string>
    <string name="no_history_found">No history found</string>
    <string name="theme_change_warning_title">Theme Change</string>
    <string name="theme_change_warning_message">A restart may be needed for the theme to apply correctly.</string>
    <string name="material_color_unsupported">This version of Android doesn\'t support material color.</string>
    <string name="info_opensource_title">Open Source Licenses</string>
    <string name="info_opensource_note">Libraries used in ZSticker</string>
    <string name="info_files_title">Import/Export</string>
    <string name="import_auto_note">Auto-detect content from ZIP</string>
    <string name="export_choose_note">Choose folder and content to save</string>
    <string name="export_to_gallery_title">Save all stickers to Gallery</string>
    <string name="export_to_gallery_note">Export all stickers to your gallery app</string>
    <string name="export_gallery_success">Exported %d stickers to Gallery</string>
    <string name="not_a_backup_file">Not a backup file</string>
    <string name="border_sticker">Border Sticker</string>
    <string name="importing_backup">Importing backup&#8230;</string>
    <string name="exporting_backup">Exporting backup&#8230;</string>
    <string name="exporting_to_gallery">Exporting to Gallery&#8230;</string>
    <string name="crop">Crop</string>
</resources>
